no JS yet in this project

--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -7,7 +7,7 @@ recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/pyramid_bimt
 pre-commit-hook = True
 csslint = False
-jshint = True
+jshint = False
 
 clean-lines = True
 debug-statements = True
