auto-release from Travis CI to our internal PyPI

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,13 @@ after_success:
  - pip install python-coveralls==2.4.0
  - coveralls
 
+deploy:
+  provider: pypi
+  server: http://niteoweb-pypi.herokuapp.com
+  user: niteoweb
+  password:
+    secure: k7TBVMXzRKqgt9boaAik45BOV8FHz5+rp5wHKM2/QA0MB0BK4tjHhTLi2nVyb0sQujPpFCWCvTYUx4jfbnaqN0wFakSH3kCnf/T61o3BtzOOX0ewqNdVuI0uqSBRgR2xqWtBGIz7zK5GOTOgMOgbqNETHbTXbQfLTJS9D6EHvv4=
+
 notifications:
   irc:
     skip_join: true
