--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -49,6 +49,7 @@ waitress = 0.8.7
 z3c.recipe.scripts = 1.0.1
 zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
+zest.releaser = 3.47
 zope.browser = 2.0.2
 zope.component = 4.1.0
 zope.configuration = 4.0.2
