fix regressions when refactoring UserSettings -> UserProperty

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -37,6 +37,7 @@ pyramid-layout = 0.8
 pyramid-tm = 0.7
 pytz = 2013b
 repoze.lru = 0.6
+repoze.sendmail = 4.1
 requests = 1.2.3
 setuptools = 0.9.8
 six = 1.4.1
@@ -72,6 +73,10 @@ zope.tal = 3.6.1
 zope.tales = 4.0.1
 zope.traversing = 3.14.0
 zptlint = 0.2.4
+
+# Required by:
+# pyramid-bimt==0.1.2.dev0
+pyramid-mailer = 0.13
 
 # deform
 pyramid-deform = 0.2
