--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_success:
 
 deploy:
   provider: pypi
-  server: http://niteoweb-pypi.herokuapp.com
+  server: https://pypi.niteoweb.com
   user: niteoweb
   password:
     secure: k7TBVMXzRKqgt9boaAik45BOV8FHz5+rp5wHKM2/QA0MB0BK4tjHhTLi2nVyb0sQujPpFCWCvTYUx4jfbnaqN0wFakSH3kCnf/T61o3BtzOOX0ewqNdVuI0uqSBRgR2xqWtBGIz7zK5GOTOgMOgbqNETHbTXbQfLTJS9D6EHvv4=
