add and edit user form and tests

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -21,6 +21,10 @@ sqlalchemy.url = sqlite:///./bimt-app.db
 session.secret = secret
 authtkt.secret = secret
 
+mail.default_sender = info@bigimtoolbox.com
+bimt.app_name = BIMT
+bimt.app_title = Big IM Toolbox
+
 
 ###
 # wsgi server configuration
