names should be lowercase

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -22,7 +22,7 @@ session.secret = secret
 authtkt.secret = secret
 
 mail.default_sender = info@bigimtoolbox.com
-bimt.app_name = BIMT
+bimt.app_name = bimt
 bimt.app_title = Big IM Toolbox
 
 
