expire_subscriptions script

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -16,6 +16,7 @@ buildout-versions = 1.7
 coverage = 3.6
 docutils = 0.11
 flake8 = 2.0
+flufl.enum = 4.0
 i18ndude = 3.3.0
 inflect = 0.2.4
 mccabe = 0.2.1
