Back to development: 0.3

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -35,8 +35,10 @@ pyramid = 1.4.5
 pyramid-basemodel = 0.2.1
 pyramid-debugtoolbar = 1.0.7
 pyramid-layout = 0.8
+pyramid-raven = 0.1.2
 pyramid-tm = 0.7
 pytz = 2013b
+raven = 3.4.0
 repoze.lru = 0.6
 repoze.sendmail = 4.1
 requests = 1.2.3
