fix hash could not be identified error

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -74,6 +74,7 @@ zope.security = 4.0.0
 zope.sqlalchemy = 0.7.2
 zope.tal = 3.6.1
 zope.tales = 4.0.1
+zope.testing = 4.1.2
 zope.traversing = 3.14.0
 zptlint = 0.2.4
 
