add alembic settings script location

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -24,6 +24,9 @@ authtkt.secret = secret
 bimt.app_name = bimt
 bimt.app_title = Big IM Toolbox
 
+# alembic settings
+script_location = %(here)s/../src/bms/alembic
+
 
 ###
 # wsgi server configuration
