--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -13,6 +13,6 @@ clean-lines = True
 debug-statements = True
 imports = True
 pep3101 = True
-prefer-single-quotes = False
+prefer-single-quotes = True
 utf8-header = True
 flake8-max-complexity = 12
