handle all static resources with Fanstatic

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -16,6 +16,8 @@ parts =
 socket-timeout = 3
 allow-hosts =
     *.python.org
+    code.google.com
+    which.googlecode.com
 
 [scripts]
 recipe = z3c.recipe.scripts
