--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -88,3 +88,22 @@ colander = 1.0b1
 deform = 2.0a2
 distribute = 0.6.40
 peppercorn = 0.4
+
+# fanstatic
+fanstatic = 1.0a4
+js.deform = 0.9.8
+js.jquery = 1.9.1
+js.jquery-form = 3.09
+js.jquery-maskedinput = 1.3.1
+js.jquery-maskmoney = 1.4.1
+js.jquery-timepicker-addon = 1.3-1
+js.jqueryui = 1.10.3
+js.lesscss = 1.3.0
+js.jquery_datatables = 1.9.4-2
+js.modernizr = 2.5.3.1
+js.tinymce = 4.0.2
+pyramid-fanstatic = 0.5
+which = 1.1.0
+cssmin = 0.2.0
+js.modernizr = 2.5.3.1
+jsmin = 2.0.7
