--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -91,6 +91,7 @@ peppercorn = 0.4
 
 # fanstatic
 fanstatic = 1.0a4
+js.bootstrap = 3.0.0.1
 js.deform = 0.9.8
 js.jquery = 1.9.1
 js.jquery-form = 3.09
