redirect disabled to value of settings entry and tests

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -23,6 +23,7 @@ authtkt.secret = secret
 
 bimt.app_name = bimt
 bimt.app_title = Big IM Toolbox
+bimt.disabled_user_redirect_path = /
 
 # alembic settings
 script_location = %(here)s/../src/bms/alembic
