support for jQuery.DataTables

--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -5,6 +5,7 @@ parts +=
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/pyramid_bimt
+return-status-codes = True
 pre-commit-hook = True
 csslint = False
 jshint = False
