--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -94,6 +94,7 @@ fanstatic = 1.0a4
 js.bootstrap = 3.0.0.1
 js.deform = 0.9.8
 js.jquery = 1.9.1
+js.jquery-datatables = 1.9.4-2
 js.jquery-form = 3.09
 js.jquery-maskedinput = 1.3.1
 js.jquery-maskmoney = 1.4.1
