--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -8,8 +8,8 @@ directory = ${buildout:directory}/src/pyramid_bimt
 return-status-codes = True
 pre-commit-hook = True
 csslint = False
-jshint = False
 
+jshint = True
 clean-lines = True
 debug-statements = True
 imports = True
