--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -42,6 +42,7 @@ raven = 3.4.0
 repoze.lru = 0.6
 repoze.sendmail = 4.1
 requests = 1.2.3
+sadisplay = 0.3.8dev
 setuptools = 0.9.8
 simplejson = 3.3.1
 six = 1.4.1
