Add support for AJAX loading of data into jQuery.dataTables
* kept backwards compatibility for old tables
* rewrote the AuditLog table to showcase this new functionality

--- a/.jshintignore
+++ b/.jshintignore
@@ -1,3 +1,4 @@
 src/pyramid_bimt/static/datatables/dataTables.bootstrap.js
 src/pyramid_bimt/static/datatables/dataTables.bootstrap.min.js
+src/pyramid_bimt/static/bimt.min.js
 
