--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -11,14 +11,19 @@ Sphinx = 1.1.3
 Unidecode = 0.04.14
 WebOb = 1.2.3
 WebTest = 2.0.7
+amqp = 1.4.4
+anyjson = 0.3.3
 beautifulsoup4 = 4.3.2
+billiard = 3.3.0.14
 buildout-versions = 1.7
+celery = 3.1.10
 coverage = 3.6
 docutils = 0.11
 flake8 = 2.0
 flufl.enum = 4.0
 i18ndude = 3.3.0
 inflect = 0.2.4
+kombu = 3.0.14
 mccabe = 0.2.1
 mock = 1.0.1
 mr.developer = 1.25
@@ -39,6 +44,7 @@ pyramid-raven = 0.1.2
 pyramid-tm = 0.7
 pytz = 2013b
 raven = 3.4.0
+redis = 2.9.0
 repoze.lru = 0.6
 repoze.sendmail = 4.1
 requests = 1.2.3
@@ -79,6 +85,14 @@ zope.tales = 4.0.1
 zope.testing = 4.1.2
 zope.traversing = 3.14.0
 zptlint = 0.2.4
+
+# Required by:
+# pyramid-bimt==0.8.4.dev0
+js.jquery-timeago = 1.3.0
+
+# Required by:
+# pyramid-bimt==0.8.4.dev0
+pyramid-celery = 1.3
 
 # Required by:
 # pyramid-bimt==0.1.2.dev0
