--- a/.jshintignore
+++ b/.jshintignore
@@ -1,4 +1,5 @@
 src/pyramid_bimt/static/datatables/dataTables.bootstrap.js
 src/pyramid_bimt/static/datatables/dataTables.bootstrap.min.js
 src/pyramid_bimt/static/bimt.min.js
+src/pyramid_bimt/static/chosen*
 
