--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -19,7 +19,7 @@ buildout-versions = 1.7
 celery = 3.1.10
 coverage = 3.6
 docutils = 0.11
-flake8 = 2.0
+flake8 = 2.2.2
 flufl.enum = 4.0
 i18ndude = 3.3.0
 inflect = 0.2.4
@@ -32,10 +32,10 @@ nose-selecttests = 0.3
 ordereddict = 1.1
 passlib = 1.6.1
 pbkdf2 = 1.3
-pep8 = 1.4.6
+pep8 = 1.5.7
 plone.i18n = 2.0.9
-plone.recipe.codeanalysis = 1.0b6
-pyflakes = 0.7.3
+plone.recipe.codeanalysis = 1.0rc1
+pyflakes = 0.8.1
 pyramid = 1.4.5
 pyramid-basemodel = 0.2.1
 pyramid-debugtoolbar = 1.0.7
