--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -4,7 +4,10 @@ newest = false
 extends = versions.cfg
 versions = versions
 prefer-final = true
-extensions = buildout-versions
+extensions =
+    buildout-versions
+    isotoma.buildout.basicauth
+    buildout.disablessl
 develop = .
 
 eggs =
@@ -12,12 +15,24 @@ eggs =
 parts =
     scripts
 
+find-links += https://pypi.niteoweb.com/packages/
+
 # network speedup
 socket-timeout = 3
 allow-hosts =
     *.python.org
     code.google.com
     which.googlecode.com
+    *pypi.niteoweb.com
+
+[basicauth]
+credentials = niteoweb-pypi
+interactive = no
+
+[niteoweb-pypi]
+uri = https://pypi.niteoweb.com/packages/
+username = niteoweb
+password = ni6kixe2why9ga
 
 [scripts]
 recipe = z3c.recipe.scripts
