--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -4,7 +4,7 @@ extends =
     code-analysis.cfg
 
 eggs +=
-   pyramid_bimt [test,development]
+   pyramid_bimt [test,develop]
 
 extensions +=
     mr.developer
