--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -16,12 +16,14 @@ ColanderAlchemy = 0.3.1
 Jinja2 = 2.7.3
 Mako = 0.9.1
 MarkupSafe = 0.18
+Paste = 1.7.5.1
 PasteDeploy = 1.5.0
 Pygments = 1.6
 SQLAlchemy = 0.9.6
 Sphinx = 1.2.2
 WebOb = 1.2.3
 WebTest = 2.0.15
+alembic = 0.6.5
 amqp = 1.4.5
 anyjson = 0.3.3
 beautifulsoup4 = 4.3.2
@@ -30,8 +32,10 @@ buildout-versions = 1.7
 buildout-versions-checker = 1.5.1
 celery = 3.1.13
 colander = 1.0b1
+cornice = 0.16.2
 coverage = 3.7
 cssmin = 0.2.0
+decorator = 3.4.0
 deform = 2.0a2
 docutils = 0.11
 fanstatic = 1.0a5
@@ -39,7 +43,7 @@ flake8 = 2.2.2
 flufl.enum = 4.0.1
 futures = 2.1.6
 inflect = 0.2.4
-js.bootstrap = 3.0.0.1
+js.bootstrap = 3.1.1
 js.deform = 0.9.8
 js.jquery = 1.9.1
 js.jquery-datatables = 1.9.4-2
@@ -52,7 +56,10 @@ js.jqueryui = 1.10.3
 js.modernizr = 2.5.3.1
 js.tinymce = 4.0.28
 jsmin = 2.0.11
+jsonpatch = 0.12
+jsonpointer = 0.7
 kombu = 3.0.21
+lxml = 3.3.5
 mccabe = 0.2.1
 mock = 1.0.1
 mr.developer = 1.30
@@ -65,14 +72,15 @@ plone.recipe.codeanalysis = 1.0rc1
 pyflakes = 0.8.1
 pyramid = 1.4.5
 pyramid-basemodel = 0.2.3
-pyramid-celery = 1.3
+pyramid-celery = 1.3-787819ca36e66832e3730b05823f8f914830a785
 pyramid-debugtoolbar = 2.1
 pyramid-deform = 0.2
 pyramid-fanstatic = 0.5
 pyramid-layout = 0.8
-pyramid-mailer = 0.13
+pyramid-mailer = 0.13-253fca78d5cb28dc23e7260669e9e045517dca2f
 pyramid-mako = 0.3.1
 pyramid-raven = 0.1.2
+pyramid-robot = 1.0
 pyramid-tm = 0.7
 python-dateutil = 2.2
 pytz = 2014.4
@@ -81,7 +89,13 @@ redis = 2.10.1
 repoze.lru = 0.6
 repoze.sendmail = 4.2
 requests = 2.3.0
+robotframework = 2.8.3
+robotframework-debuglibrary = 0.3
+robotframework-httplibrary = 0.4.2
+robotframework-selenium2library = 1.4.0
+robotsuite = 1.4.1
 sadisplay = 0.3.8dev
+selenium = 2.41.0
 setuptools = 3.6
 shutilwhich = 1.0.1
 simplejson = 3.5.3
@@ -96,9 +110,11 @@ which = 1.1.0
 z3c.recipe.scripts = 1.0.1
 zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
+zc.recipe.testrunner = 2.0.0
 zest.releaser = 3.50
 zope.deprecation = 4.1.1
 zope.exceptions = 4.0.7
 zope.interface = 4.0.5
 zope.sqlalchemy = 0.7.5
 zope.testing = 4.1.3
+zope.testrunner = 4.4.1
