--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -1,112 +1,44 @@
+[buildout]
+parts += unused
+
+# to get unused version pins: uncomment, re-run buildout and run bin/unused
+# eggs-directory = eggs
+
+[unused]
+recipe = zc.recipe.egg
+eggs = buildout-versions-checker
+scripts = find-unused-versions=unused
+arguments = '-s buildout.d/versions.cfg'
+
 [versions]
-Chameleon = 2.12
-ColanderAlchemy = 0.3.0
-Jinja2 = 2.7.1
-Mako = 0.9.0
+Chameleon = 2.16
+ColanderAlchemy = 0.3.1
+Jinja2 = 2.7.3
+Mako = 0.9.1
 MarkupSafe = 0.18
 PasteDeploy = 1.5.0
 Pygments = 1.6
-SQLAlchemy = 0.8.2
-Sphinx = 1.1.3
-Unidecode = 0.04.14
+SQLAlchemy = 0.9.6
+Sphinx = 1.2.2
 WebOb = 1.2.3
-WebTest = 2.0.7
-amqp = 1.4.4
+WebTest = 2.0.15
+amqp = 1.4.5
 anyjson = 0.3.3
 beautifulsoup4 = 4.3.2
-billiard = 3.3.0.14
+billiard = 3.3.0.18
 buildout-versions = 1.7
-celery = 3.1.10
-coverage = 3.6
-docutils = 0.11
-flake8 = 2.2.2
-flufl.enum = 4.0
-i18ndude = 3.3.0
-inflect = 0.2.4
-kombu = 3.0.14
-mccabe = 0.2.1
-mock = 1.0.1
-mr.developer = 1.25
-nose = 1.3.0
-nose-selecttests = 0.3
-ordereddict = 1.1
-passlib = 1.6.1
-pbkdf2 = 1.3
-pep8 = 1.5.7
-plone.i18n = 2.0.9
-plone.recipe.codeanalysis = 1.0rc1
-pyflakes = 0.8.1
-pyramid = 1.4.5
-pyramid-basemodel = 0.2.1
-pyramid-debugtoolbar = 1.0.7
-pyramid-layout = 0.8
-pyramid-raven = 0.1.2
-pyramid-tm = 0.7
-pytz = 2013b
-raven = 3.4.0
-redis = 2.9.0
-repoze.lru = 0.6
-repoze.sendmail = 4.1
-requests = 1.2.3
-sadisplay = 0.3.8dev
-setuptools = 0.9.8
-simplejson = 3.3.1
-six = 1.4.1
-slugify = 0.0.1
-transaction = 1.4.1
-translationstring = 1.1
-unittest2 = 0.5.1
-venusian = 1.0a8
-waitress = 0.8.7
-z3c.recipe.scripts = 1.0.1
-zc.buildout = 1.7.1
-zc.recipe.egg = 1.3.2
-zest.releaser = 3.47
-zope.browser = 2.0.2
-zope.component = 4.1.0
-zope.configuration = 4.0.2
-zope.contentprovider = 3.7.2
-zope.contenttype = 4.0.1
-zope.deprecation = 4.0.2
-zope.event = 4.0.2
-zope.exceptions = 4.0.6
-zope.i18n = 3.8.0
-zope.i18nmessageid = 4.0.2
-zope.interface = 4.0.5
-zope.location = 4.0.2
-zope.pagetemplate = 4.0.4
-zope.proxy = 4.1.3
-zope.publisher = 3.13.3
-zope.schema = 4.3.2
-zope.security = 4.0.0
-zope.sqlalchemy = 0.7.2
-zope.tal = 3.6.1
-zope.tales = 4.0.1
-zope.testing = 4.1.2
-zope.traversing = 3.14.0
-zptlint = 0.2.4
-
-# Required by:
-# pyramid-bimt==0.8.4.dev0
-js.jquery-timeago = 1.3.0
-
-# Required by:
-# pyramid-bimt==0.8.4.dev0
-pyramid-celery = 1.3
-
-# Required by:
-# pyramid-bimt==0.1.2.dev0
-pyramid-mailer = 0.13
-
-# deform
-pyramid-deform = 0.2
+buildout-versions-checker = 1.5.1
+celery = 3.1.13
 colander = 1.0b1
+coverage = 3.7
+cssmin = 0.2.0
 deform = 2.0a2
-distribute = 0.6.40
-peppercorn = 0.4
-
-# fanstatic
-fanstatic = 1.0a4
+docutils = 0.11
+fanstatic = 1.0a5
+flake8 = 2.2.2
+flufl.enum = 4.0.1
+futures = 2.1.6
+inflect = 0.2.4
 js.bootstrap = 3.0.0.1
 js.deform = 0.9.8
 js.jquery = 1.9.1
@@ -114,16 +46,59 @@ js.jquery-datatables = 1.9.4-2
 js.jquery-form = 3.09
 js.jquery-maskedinput = 1.3.1
 js.jquery-maskmoney = 1.4.1
+js.jquery-timeago = 1.3.0
 js.jquery-timepicker-addon = 1.3-1
 js.jqueryui = 1.10.3
-js.lesscss = 1.3.0
-js.jquery_datatables = 1.9.4-2
 js.modernizr = 2.5.3.1
-js.tinymce = 4.0.2
+js.tinymce = 4.0.28
+jsmin = 2.0.11
+kombu = 3.0.21
+mccabe = 0.2.1
+mock = 1.0.1
+mr.developer = 1.30
+nose = 1.3.3
+nose-selecttests = 0.4
+passlib = 1.6.2
+pep8 = 1.5.7
+peppercorn = 0.4
+plone.recipe.codeanalysis = 1.0rc1
+pyflakes = 0.8.1
+pyramid = 1.4.5
+pyramid-basemodel = 0.2.3
+pyramid-celery = 1.3
+pyramid-debugtoolbar = 2.1
+pyramid-deform = 0.2
 pyramid-fanstatic = 0.5
-which = 1.1.0
-cssmin = 0.2.0
-js.modernizr = 2.5.3.1
-jsmin = 2.0.7
-
+pyramid-layout = 0.8
+pyramid-mailer = 0.13
+pyramid-mako = 0.3.1
+pyramid-raven = 0.1.2
+pyramid-tm = 0.7
 python-dateutil = 2.2
+pytz = 2014.4
+raven = 5.0.0
+redis = 2.10.1
+repoze.lru = 0.6
+repoze.sendmail = 4.2
+requests = 2.3.0
+sadisplay = 0.3.8dev
+setuptools = 3.6
+shutilwhich = 1.0.1
+simplejson = 3.5.3
+six = 1.7.3
+slugify = 0.0.1
+transaction = 1.4.3
+translationstring = 1.1
+unittest2 = 0.5.1
+venusian = 1.0
+waitress = 0.8.9
+which = 1.1.0
+z3c.recipe.scripts = 1.0.1
+zc.buildout = 1.7.1
+zc.recipe.egg = 1.3.2
+zest.releaser = 3.50
+zope.deprecation = 4.1.1
+zope.exceptions = 4.0.7
+zope.interface = 4.0.5
+zope.sqlalchemy = 0.7.5
+zope.testing = 4.1.3
