Log IP, os and browser on user login

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -103,6 +103,7 @@ six = 1.7.3
 slugify = 0.0.1
 transaction = 1.4.3
 translationstring = 1.1
+ua-parser = 0.3.5
 unittest2 = 0.5.1
 venusian = 1.0
 waitress = 0.8.9
