use buildout to install jshint

--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -1,10 +1,17 @@
 [buildout]
 parts +=
+    jshint
     code-analysis
+
+[jshint]
+recipe = gp.recipe.node
+npms = jshint
+scripts = jshint
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/pyramid_bimt
+jshint-bin = ${buildout:directory}/bin/jshint
 return-status-codes = True
 pre-commit-hook = True
 csslint = False
