--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -43,6 +43,9 @@ fanstatic = 1.0a5
 flake8 = 2.2.2
 flufl.enum = 4.0.1
 futures = 2.1.6
+gp.recipe.node = 0.10.22.1
+hexagonit.recipe.cmmi = 2.0
+hexagonit.recipe.download = 1.7
 inflect = 0.2.4
 js.bootstrap = 3.1.1
 js.deform = 0.9.8
@@ -83,6 +86,7 @@ pyramid-mako = 0.3.1
 pyramid-raven = 0.1.2
 pyramid-robot = 1.0
 pyramid-tm = 0.7
+python-archive = 0.2
 python-dateutil = 2.2
 pytz = 2014.4
 raven = 5.0.0
