more secure sessions & cookies

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -11,6 +11,7 @@ scripts = find-unused-versions=unused
 arguments = '-s buildout.d/versions.cfg'
 
 [versions]
+Beaker = 1.6.4
 Chameleon = 2.16
 ColanderAlchemy = 0.3.1
 Jinja2 = 2.7.3
@@ -73,9 +74,11 @@ passlib = 1.6.2
 pep8 = 1.5.7
 peppercorn = 0.4
 plone.recipe.codeanalysis = 1.0rc1
+pycrypto = 2.6.1
 pyflakes = 0.8.1
 pyramid = 1.4.5
 pyramid-basemodel = 0.2.3
+pyramid-beaker = 0.8
 pyramid-celery = 1.3-787819ca36e66832e3730b05823f8f914830a785
 pyramid-debugtoolbar = 2.1
 pyramid-deform = 0.2
