missed one version pin

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -74,6 +74,7 @@ passlib = 1.6.2
 pep8 = 1.5.7
 peppercorn = 0.4
 plone.recipe.codeanalysis = 1.0rc1
+psycopg2 = 2.5.1
 pycrypto = 2.6.1
 pyflakes = 0.8.1
 pyramid = 1.4.5
