--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -22,7 +22,7 @@ PasteDeploy = 1.5.0
 Pygments = 1.6
 SQLAlchemy = 0.9.6
 Sphinx = 1.2.2
-WebOb = 1.2.3
+WebOb = 1.4
 WebTest = 2.0.15
 alembic = 0.6.5
 amqp = 1.4.5
@@ -77,10 +77,11 @@ plone.recipe.codeanalysis = 1.0rc1
 psycopg2 = 2.5.1
 pycrypto = 2.6.1
 pyflakes = 0.8.1
-pyramid = 1.4.5
+pyramid = 1.5.1
 pyramid-basemodel = 0.2.3
 pyramid-beaker = 0.8
 pyramid-celery = 1.3-787819ca36e66832e3730b05823f8f914830a785
+pyramid_chameleon = 0.3
 pyramid-debugtoolbar = 2.1
 pyramid-deform = 0.2
 pyramid-fanstatic = 0.5
