alembic needs mako

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -81,13 +81,13 @@ pyramid = 1.5.1
 pyramid-basemodel = 0.2.3
 pyramid-beaker = 0.8
 pyramid-celery = 1.3-787819ca36e66832e3730b05823f8f914830a785
-pyramid_chameleon = 0.3
+pyramid-chameleon = 0.3
 pyramid-debugtoolbar = 2.1
 pyramid-deform = 0.2
 pyramid-fanstatic = 0.5
 pyramid-layout = 0.8
 pyramid-mailer = 0.13-253fca78d5cb28dc23e7260669e9e045517dca2f
-pyramid-mako = 0.3.1
+pyramid-mako = 1.0.2
 pyramid-raven = 0.1.2
 pyramid-robot = 1.0
 pyramid-tm = 0.7
