--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -97,7 +97,9 @@ pytz = 2014.4
 raven = 5.0.0
 redis = 2.10.1
 repoze.lru = 0.6
-repoze.sendmail = 4.2
+
+#Pinned to 4.1 because of https://github.com/repoze/repoze.sendmail/issues/31
+repoze.sendmail = 4.1
 requests = 2.3.0
 robotframework = 2.8.3
 robotframework-debuglibrary = 0.3
