--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -32,7 +32,7 @@ billiard = 3.3.0.18
 buildout-versions = 1.7
 buildout-versions-checker = 1.5.1
 celery = 3.1.13
-colander = 1.0b1
+colander = 1.0
 collective.recipe.environment = 0.2.0
 cornice = 0.16.2
 coverage = 3.7
