--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -48,6 +48,7 @@ gp.recipe.node = 0.10.22.1
 hexagonit.recipe.cmmi = 2.0
 hexagonit.recipe.download = 1.7
 inflect = 0.2.4
+iso8601 = 0.1.10
 js.bootstrap = 3.1.1
 js.deform = 0.9.8
 js.jquery = 1.9.1
