Add symmetric encryption to be used for api keys passwords and similar

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -22,6 +22,7 @@ authtkt.secret = secret
 bimt.app_name = bimt
 bimt.app_title = Big IM Toolbox
 bimt.disabled_user_redirect_path = /
+bimt.encryption_aes_16b_key = abcdabcdabcdabcd
 
 # alembic settings
 script_location = %(here)s/../src/bms/alembic
