--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -100,6 +100,8 @@ repoze.lru = 0.6
 
 #Pinned to 4.1 because of https://github.com/repoze/repoze.sendmail/issues/31
 repoze.sendmail = 4.1
+repoze.workflow = 0.6.1
+repoze.zcml = 0.4
 requests = 2.3.0
 robotframework = 2.8.3
 robotframework-debuglibrary = 0.3
@@ -125,9 +127,14 @@ zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 2.0.0
 zest.releaser = 3.50
+zope.component = 3.9.5
+zope.configuration = 4.0.3
 zope.deprecation = 4.1.1
+zope.event = 3.5.2
 zope.exceptions = 4.0.7
+zope.i18nmessageid = 3.5.3
 zope.interface = 4.0.5
+zope.schema = 4.2.2
 zope.sqlalchemy = 0.7.5
 zope.testing = 4.1.3
 zope.testrunner = 4.4.1
