upgrade to latest plone.recipe.codeanalysis

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -73,7 +73,7 @@ nose-selecttests = 0.4
 passlib = 1.6.2
 pep8 = 1.6.2
 peppercorn = 0.4
-plone.recipe.codeanalysis = 1.0rc1
+plone.recipe.codeanalysis = 2.0b1
 psycopg2 = 2.5.1
 pycrypto = 2.6.1
 pyflakes = 0.8.1
