enable some flake8 extension

--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -18,9 +18,13 @@ csslint = False
 
 jshint = True
 clean-lines = True
-debug-statements = True
 imports = True
 pep3101 = True
-prefer-single-quotes = True
-utf8-header = True
 flake8-max-complexity = 12
+jshint-suppress-warnings = False
+
+flake8-extensions =
+    flake8-blind-except
+    flake8-coding
+    flake8-debugger
+    flake8-quotes
