use getattr instead of hasattr
The hasattr built-in function has been broken for 20 years according to Guido.
Let's not use it. http://www.gossamer-threads.com/lists/python/dev/856859

--- a/buildout.d/code-analysis.cfg
+++ b/buildout.d/code-analysis.cfg
@@ -22,6 +22,7 @@ imports = True
 pep3101 = True
 flake8-max-complexity = 12
 jshint-suppress-warnings = False
+hasattr = True
 
 flake8-extensions =
     flake8-blind-except
