--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -32,6 +32,7 @@ billiard = 3.3.0.18
 buildout-versions = 1.7
 buildout-versions-checker = 1.5.1
 celery = 3.1.13
+check-manifest = 0.24
 colander = 1.0
 collective.recipe.environment = 0.2.0
 cornice = 0.16.2
@@ -42,6 +43,10 @@ deform = 2.0a2
 docutils = 0.11
 fanstatic = 1.0a5
 flake8 = 2.2.5
+flake8-blind-except = 0.1.0
+flake8-coding = 1.0.1
+flake8-debugger = 1.3.2
+flake8-quotes = 0.0.1
 flufl.enum = 4.0.1
 futures = 2.1.6
 gp.recipe.node = 0.10.22.1
@@ -71,7 +76,9 @@ mr.developer = 1.30
 nose = 1.3.3
 nose-selecttests = 0.4
 passlib = 1.6.2
+pep257 = 0.5.0
 pep8 = 1.6.2
+pep8-naming = 0.2.2
 peppercorn = 0.4
 plone.recipe.codeanalysis = 2.0b1
 psycopg2 = 2.5.1
@@ -97,9 +104,6 @@ pytz = 2014.4
 raven = 5.0.0
 redis = 2.10.1
 repoze.lru = 0.6
-
-#Pinned to 4.1 because of https://github.com/repoze/repoze.sendmail/issues/31
-repoze.sendmail = 4.1
 repoze.workflow = 0.6.1
 repoze.zcml = 0.4
 requests = 2.3.0
@@ -138,3 +142,6 @@ zope.schema = 4.2.2
 zope.sqlalchemy = 0.7.5
 zope.testing = 4.1.3
 zope.testrunner = 4.4.1
+
+#Pinned to 4.1 because of https://github.com/repoze/repoze.sendmail/issues/31
+repoze.sendmail = 4.1
