--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -35,6 +35,7 @@ celery = 3.1.13
 check-manifest = 0.24
 colander = 1.0
 collective.recipe.environment = 0.2.0
+colorama = 0.3.3
 cornice = 0.16.2
 coverage = 3.7
 cssmin = 0.2.0
@@ -80,6 +81,7 @@ pep257 = 0.5.0
 pep8 = 1.6.2
 pep8-naming = 0.2.2
 peppercorn = 0.4
+pkginfo = 1.2.1
 plone.recipe.codeanalysis = 2.0b1
 psycopg2 = 2.5.1
 pycrypto = 2.6.1
@@ -98,6 +100,7 @@ pyramid-mako = 1.0.2
 pyramid-raven = 0.1.2
 pyramid-robot = 1.0
 pyramid-tm = 0.7
+pyroma = 1.8.1
 python-archive = 0.2
 python-dateutil = 2.2
 pytz = 2014.4
@@ -121,10 +124,12 @@ six = 1.8.0
 slugify = 0.0.1
 transaction = 1.4.3
 translationstring = 1.1
+twine = 1.5.0
 ua-parser = 0.3.5
 unittest2 = 0.5.1
 venusian = 1.0
 waitress = 0.8.9
+wheel = 0.24.0
 which = 1.1.0
 z3c.recipe.scripts = 1.0.1
 zc.buildout = 1.7.1
